@@ -1,6 +1,7 @@
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
@@ -30,22 +31,16 @@ public class TestStatusCheckPR {
         String toCurl = baseApiPath + "pulls?state=all";
         String pullRequests = curl(toCurl);
         
-        String message = baseApiPath + ";" + toCurl + ";" + pullRequests;
-        
         boolean foundPullRequest = false;
-        try {
-            // check each pull request to see if one meets assignment requirements
-            for (JsonElement pr : JsonParser.parseString(pullRequests).getAsJsonArray().asList()) {
-                String prNumber = pr.getAsJsonObject().get("number").getAsString();
+        // check each pull request to see if one meets assignment requirements
+        for (JsonElement pr : JsonParser.parseString(pullRequests).getAsJsonArray().asList()) {
+            String prNumber = pr.getAsJsonObject().get("number").getAsString();
 
-                if (hasStatusChecks(baseApiPath, prNumber) &&
-                        hasReviewerApproval(baseApiPath, prNumber)) {
-                    foundPullRequest = true;
-                    break;
-                }
+            if (hasStatusChecks(baseApiPath, prNumber) &&
+                    hasReviewerApproval(baseApiPath, prNumber)) {
+                foundPullRequest = true;
+                break;
             }
-        } catch (Exception e) {
-            throw new RuntimeException(message + ";" + e.getMessage(), e);
         }
         Assertions.assertTrue(foundPullRequest, "No pull request with required status checks (failure, then success) and reviewer approval found");
     }
@@ -141,17 +136,21 @@ public class TestStatusCheckPR {
         String getStatusChecks = baseApiPath + "commits/" + sha + "/check-runs";
         String statusCheckResult = curl(getStatusChecks);
         Map<String, String> checkToStatus = new HashMap<>();
-        
-        for (JsonElement check : JsonParser.parseString(statusCheckResult).getAsJsonObject().get("check_runs").getAsJsonArray().asList()) {
-            String name = check.getAsJsonObject().get("name").getAsString();
-            String result = check.getAsJsonObject().get("conclusion").getAsString();
-            checkToStatus.put(name, result);
+        try {
+            for (JsonElement check : JsonParser.parseString(statusCheckResult).getAsJsonObject().get("check_runs").getAsJsonArray().asList()) {
+                String name = check.getAsJsonObject().get("name").getAsString();
+                String result = check.getAsJsonObject().get("conclusion").getAsString();
+                checkToStatus.put(name, result);
+            }
+
+        } catch (Exception e) {
+            throw new RuntimeException(statusCheckResult + ";" + e.getMessage(), e);
         }
         return checkToStatus;
     }
 
     private String curl(String toCurl) throws Exception {
-        URL url = new URL(toCurl);
+        URL url = new URI(toCurl).toURL();
 
         String result = "";
         try (BufferedReader reader = new BufferedReader(new InputStreamReader(url.openStream(), "UTF-8"))) {
